objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Campaign_Member_Legacy_ID__c</fullName>
        <label>Campaign Member Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Do_Not_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <formula>if(not(isblank(ContactId)), Contact.LastActivityDate, Lead.LastActivityDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>